# trading-real-agents

./: .dockerignore  .env.enterprise.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: bear-researcher.md  bull-researcher.md  fundamentals-analyst.md  market-analyst.md  news-analyst.md  orchestrator.md  portfolio-manager.md  research-manager.md  risk-debators.md  sentiment-analyst.md  trader.md
.claude/skills/fundamental-data/: SKILL.md
.claude/skills/fundamental-data/scripts/: get_balance_sheet.py  get_cashflow.py  get_fundamentals.py  get_income_statement.py
.claude/skills/market-data/: SKILL.md
.claude/skills/market-data/scripts/: get_indicators.py  get_stock_data.py
.claude/skills/news-data/: SKILL.md
.claude/skills/news-data/scripts/: get_global_news.py  get_insider_transactions.py  get_news.py
.claude/skills/social-sentiment/: SKILL.md
.claude/skills/social-sentiment/scripts/: get_reddit.py  get_stocktwits.py
tests/: conftest.py  test_dataflows_config.py  test_env_overrides.py  test_safe_ticker_component.py  test_skill_scripts.py
tradingagents/: __init__.py  default_config.py
tradingagents/dataflows/: alpha_vantage.py  alpha_vantage_fundamentals.py  alpha_vantage_news.py  config.py  interface.py  reddit.py  stockstats_utils.py  stocktwits.py  utils.py  y_finance.py  yfinance_news.py
